actualizacion de Swagger + endpoint de sueldos
