# controllers/empresas.controller.js
@@ -43,7 +43,7 @@ exports.createEmpresa = async function (req, res, next) {
     var createdEmpresa = await EmpresaService.createEmpresa(req.body);
     return res
       .status(201)
-      .json({ createdEmpresa, message: "empresa generado correctamente" });
+      .json({ createdEmpresa, message: "Cupon de pago generado correctamente" });
   } catch (e) {
     //Return an Error Response Message with Code and the Error Message.
     console.log(e);
@@ -53,6 +53,35 @@ exports.createEmpresa = async function (req, res, next) {
   }
 };
         
+exports.createEmpresaM = async function (req, res, next) {
+  // Req.Body contains the form submit values.
+  var Empresa = [
+    {
+      nombre: req.body.nombre,
+      codigopago: req.body.codigopago,
+      cuitEmpresa: req.body.cuitEmpresa,
+      importe: req.body.importe,
+      descripcion: req.body.descripcion,
+      fechaVencimiento: req.body.fechaVencimiento,
+      estado: req.body.estado,
+    },
+  ];
+
+  try {
+    // Calling the Service function with the new object from the Request Body
+    var createdEmpresa = await EmpresaService.createEmpresaM(req.body);
+    return res
+      .status(201)
+      .json({ createdEmpresa, message: "Cupon de pago generado correctamente" });
+  } catch (e) {
+    //Return an Error Response Message with Code and the Error Message.
+    console.log(e);
+    return res
+      .status(400)
+      .json({ status: 400, message: "Error al querer generar el empresa" });
+  }
+};
+
 exports.updateEmpresa = async function (req, res, next) {
   // Id is necessary for the update
   if (!req.body.codigopago) {
@@ -79,7 +108,7 @@ exports.updateEmpresa = async function (req, res, next) {
     return res.status(200).json({
       status: 200,
       data: updatedEmpresa,
-      message: "Empresa actualizada correctamente",
+      message: "Cupon de pago actualizado correctamente",
     });
   } catch (e) {
     return res
@@ -110,7 +139,7 @@ exports.getEmpresaESTADO = async function (req, res, next) {
       return res.status(200).json({
         status: 200,
         data: Empresas,
-        message: "estado obtenido correctamente",
+        message: "Estado obtenido correctamente",
       });
   } catch (e) {
     console.log(e);
